silex_css/tests/ui/fail_unit_to_keyword.stderr
error[E0277]: 类型 `Px` 无法作为有效的 CSS `BorderBottomStyle` 属性值使用
 --> tests/ui/fail_unit_to_keyword.rs:5:46
  |
5 |     let _ = Style::new().border_bottom_style(px(10));
  |                          ------------------- ^^^^^^ 无效的 CSS 属性类型
  |                          |
  |                          required by a bound introduced by this call
  |
  = help: the trait `ValidFor<BorderBottomStyle>` is not implemented for `Px`
  = note: 请检查是否传入了错误的类型（例如将 Px 传给了 Color）。如果必须传入复杂的动态表达式，可以使用 `UnsafeCss::new(...)` 显式绕过。
  = help: the following other types implement trait `ValidFor<Prop>`:
            `Px` implements `ValidFor<AlignContent>`
            `Px` implements `ValidFor<AlignItems>`
            `Px` implements `ValidFor<AlignSelf>`
            `Px` implements `ValidFor<AlignmentBaseline>`
            `Px` implements `ValidFor<Animation>`
            `Px` implements `ValidFor<AnimationComposition>`
            `Px` implements `ValidFor<AnimationDelay>`
            `Px` implements `ValidFor<AnimationDirection>`
          and $N others
note: required by a bound in `silex_css::builder::Style::border_bottom_style`
 --> src/builder.rs
  |
  |                     V::Value: ValidFor<props::$pascal> + Display + Clone + Sized + 'static,
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Style::border_bottom_style`
...
  | crate::for_all_properties!(generate_builder_methods);
  | ---------------------------------------------------- in this macro invocation
  |
 ::: src/properties.rs
  |
  |             (border_bottom_style, "border-bottom-style", BorderBottomStyle, Keyword),
  |              ------------------- required by a bound in this associated function
  = note: this error originates in the macro `generate_builder_methods` which comes from the expansion of the macro `crate::for_all_properties` (in Nightly builds, run with -Z macro-backtrace for more info)
